test/expressions/vass/undefined-max-error.good
undefined-max-error.chpl:5: error: 'max(type t)' is not defined for t=C
