test/expressions/vass/undefined-max-error.chpl
// checks compile-time error when max(t) is not defined

class C { }

writeln(max(C));
